<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/parent_layout_margin"
    android:paddingEnd="@dimen/parent_layout_padding_end"
    android:background="@drawable/card_background"
    android:orientation="horizontal"
    >


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/image_margin"
        android:src="@drawable/profile_image" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/information_margin_top"
        android:layout_marginEnd="@dimen/information_margin_end"
        android:layout_marginBottom="@dimen/information_margin_bottom"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/dmsans_bold"
                android:text="@string/name"
                android:textColor="@color/black"
                android:textSize="@dimen/name_text_size"
                />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/border"
                android:fontFamily="@font/dmsans_regular"
                android:paddingHorizontal="@dimen/hour_padding_horizontal"
                android:paddingVertical="@dimen/hours_padding_vertical"
                android:text="@string/hours"
                android:textColor="@color/pure_white"
                android:textSize="@dimen/text_size_medium" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/dmsans_regular"
                android:text="@string/job"
                android:textColor="@color/blue_87_fade"


                />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/dmsans_regular"
                android:text="@string/nationality"
                android:textColor="@color/blue_87_fade"

                />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/map_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="4dp"
                    android:fontFamily="@font/dmsans_regular"
                    android:text="@string/current_place"
                    android:textColor="@color/blue_60_fade" />
            </LinearLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity=""
                android:fontFamily="@font/dmsans_regular"
                android:text="@string/last_update"
                android:textColor="@color/blue_38_fade" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/dmsans_regular"
                android:text="@string/reviews_count"
                android:textColor="@color/Black" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/rating_margin_start"

                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/dmsans_regular"
                    android:text="@string/rating"
                    android:textColor="@color/Black"

                    />

                <View
                    android:layout_width="@dimen/spacing_rating"
                    android:layout_height="match_parent" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/star_icon" />

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>

